# WingetUpdatesInstaller

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run.py
src/wingetupdatesinstaller/: __init__.py  main.py
src/wingetupdatesinstaller/lib/winget/: __init__.py  check_updates.py  install_update.py  list_packages.py  utils.py
src/wingetupdatesinstaller/utils/: __init__.py  hardware_info.py  package_manager.py  winget.py
