[project]
name = "wingetupdatesinstaller"
version = "0.1.0"
description = "A Gradio-based GUI application to update packages via winget"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Anvesh-Chennupati"}
]
dependencies = [
    "gradio>=4.0.0",
    "hatch",
    "uvicorn",
    "fastapi",
    "black",
    "flake8",
    "colorama",
    "pydantic",
    "pytest"
]

[project.scripts]
winget-updates = "wingetupdatesinstaller.main:create_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wingetupdatesinstaller"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
